--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             min-height: 100vh;
         }
 
+        html, body {
+            overscroll-behavior: none;
+        }
+
         /* --- Game Container --- */
         #game-board {
             position: relative;
